--- a/app/assets/stylesheets/console.css
+++ b/app/assets/stylesheets/console.css
@@ -11,5 +11,5 @@
  *= require_self
  *= require_tree .
  *= require bootstrap.min
- *= require bootstrap-theme.min
+ *# require bootstrap-theme.min
  */
