--- a/app/views/console/shows/_form.html.erb
+++ b/app/views/console/shows/_form.html.erb
@@ -1,8 +1,9 @@
-<p>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-</p>
-<p>
-  <%= f.label :desc %>
-  <%= f.text_field :desc %>   
-</p>
+<div class="form-group">
+  <%= f.label :name, "频道名" %>
+  <%= f.text_field :name, class: "form-control" %>
+</div>
+
+<div class="form-group">
+  <%= f.label :desc, "描述" %>
+  <%= f.text_field :desc, class: "form-control" %>
+</div>
