--- a/app/views/layouts/console.html.erb
+++ b/app/views/layouts/console.html.erb
@@ -1,14 +1,63 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rails1762</title>
-  <%= stylesheet_link_tag    "console", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "console", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag "console", media: "all", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <header class="navbar navbar-default" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#t_navbarCollapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button> 
+        <a class="navbar-brand" href="#">1762后台</a>
+      </div>
 
-<%= yield %>
+      <nav class="collapse navbar-collapse" role="navigation" id="t_navbarCollapse">
+        <p class="navbar-text">控制器</p>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">回到主站</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-2" role="navigation">
+        <div class="list-group">
+          <%= link_to "频道", console_shows_path, class: "list-group-item" %>
+          <%= link_to "新增频道", new_console_show_path, class: "list-group-item" %>
+        </div>
+        <div class="list-group">
+          <%= link_to "节目", console_shows_path, class: "list-group-item" %>
+          <%= link_to "新增节目", new_console_show_path, class: "list-group-item" %>
+        </div>
+      </div>
+
+      <div class="col-xs-12 col-sm-10">
+        <% flash.each do |key, value| %>
+          <%= content_tag(:div, value, class: "alert alert-#{key}") %>
+          <!-- <div class="alert alert-<%= key %>"><%= value %></div> -->
+        <% end %>
+        <%= yield %>
+      </div>
+    </div>
+
+    <hr>
+
+    <footer>
+      <p>© Company 2014</p>
+    </footer>
+
+    <%= javascript_include_tag "console", "data-turbolinks-track" => true %>
+  </div>
 </body>
 </html>
