--- a/app/views/console/shows/_form.html.erb
+++ b/app/views/console/shows/_form.html.erb
@@ -5,5 +5,5 @@
 
 <div class="form-group">
   <%= f.label :desc, "描述" %>
-  <%= f.text_field :desc, class: "form-control" %>
+  <%= f.text_area :desc, class: "form-control", rows: 5 %>
 </div>
