--- a/app/views/layouts/console.html.erb
+++ b/app/views/layouts/console.html.erb
@@ -37,8 +37,8 @@
           <%= link_to "新增频道", new_console_show_path, class: "list-group-item" %>
         </div>
         <div class="list-group">
-          <%= link_to "节目", console_shows_path, class: "list-group-item" %>
-          <%= link_to "新增节目", new_console_show_path, class: "list-group-item" %>
+          <%= link_to "节目", console_volumes_path, class: "list-group-item" %>
+          <%= link_to "新增节目", new_console_volume_path, class: "list-group-item" %>
         </div>
       </div>
 
