--- a/app/views/console/shows/index.html.erb
+++ b/app/views/console/shows/index.html.erb
@@ -17,7 +17,7 @@
               <%= link_to edit_console_show_path(show), class: "btn btn-default" do %>
                 <span class="glyphicon glyphicon-edit"></span> 编辑
               <% end %>
-              <%= link_to console_show_path(show), method: :delete, class: "btn btn-danger" do %>
+              <%= link_to console_show_path(show), method: :delete, class: "btn btn-danger", confirm: "确定要删除么？" do %>
                 <span class="glyphicon glyphicon-remove-circle"></span> 删除
               <% end %>
             </div>
@@ -27,3 +27,5 @@
     </tbody>
   </table>
 </div>
+
+<%= paginate @shows, :theme => 'bootstrap' %>
