--- a/app/views/console/volumes/_form.html.erb
+++ b/app/views/console/volumes/_form.html.erb
@@ -5,7 +5,7 @@
 
 <div class="form-group">
   <%= f.label :show_id, "所属频道" %>
-  <%= f.select :show_id, options_from_collection_for_select(@shows, 'id', 'name'), { prompt: true }, class: "form-control" %>
+  <%= f.select :show_id, options_from_collection_for_select(@shows, 'id', 'name', @from_show_id || f.object.show_id), { prompt: true }, class: "form-control" %>
 </div>
 
 <div class="form-group">
