--- a/app/views/console/volumes/index.html.erb
+++ b/app/views/console/volumes/index.html.erb
@@ -1,44 +1,53 @@
+<%= content_for :new_volume do %>
+  <% if @show.present? %>
+    <%= link_to "新增节目", new_console_volume_path(show_id: @show.id), class: "list-group-item" %>
+  <% else %>
+    <%= link_to "新增节目", new_console_volume_path, class: "list-group-item" %>
+  <% end %>
+<% end %>
+
 <ul class="nav nav-pills">
+  <%= nav_link "全部节目", console_volumes_path %>
   <% Show.all.each do |show| %>
-    <li>
-      <%= link_to show.name, console_volumes_path(show_id: show.id) %>
-    </li>
+    <%= nav_link show.name, console_show_volumes_path(show) %>
   <% end %>
 </ul>
 
 <hr>
 
-<div class="table-responsive">
-  <table class="table table-hover table-striped">
-    <thead>
-      <tr>
-        <th>标题</th>
-        <th>所属频道</th>
-        <th>新建时间</th>
-        <th>操作</th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <% @volumes.each do |vol| %>
+<%= if_data_present(@volumes) do %>
+  <div class="table-responsive">
+    <table class="table table-hover table-striped">
+      <thead>
         <tr>
-          <td><%= vol.title %></td>
-          <td><%= vol.belonged_show %></td>
-          <td><%= vol.created_at %></td>
-          <td>
-            <div class="btn-group btn-group-xs">
-              <%= link_to edit_console_volume_path(vol), class: "btn btn-default" do %>
-                <span class="glyphicon glyphicon-edit"></span> 编辑
-              <% end %>
-              <%= link_to console_volume_path(vol), method: :delete, class: "btn btn-danger", confirm: "确定要删除么？" do %>
-                <span class="glyphicon glyphicon-remove-circle"></span> 删除
-              <% end %>
-            </div>
-          </td>
+          <th>标题</th>
+          <th>所属频道</th>
+          <th>新建时间</th>
+          <th>操作</th>
         </tr>
-      <% end %>
-    </tbody>
-  </table>
-</div>
+      </thead>
 
-<%= paginate @volumes, :theme => 'bootstrap' %>
+      <tbody>
+        <% @volumes.each do |vol| %>
+          <tr>
+            <td><%= vol.title %></td>
+            <td><%= vol.belonged_show %></td>
+            <td><%= vol.created_at %></td>
+            <td>
+              <div class="btn-group btn-group-xs">
+                <%= link_to edit_console_volume_path(vol), class: "btn btn-default" do %>
+                  <span class="glyphicon glyphicon-edit"></span> 编辑
+                <% end %>
+                <%= link_to console_volume_path(vol), method: :delete, class: "btn btn-danger", confirm: "确定要删除么？" do %>
+                  <span class="glyphicon glyphicon-remove-circle"></span> 删除
+                <% end %>
+              </div>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+
+  <%= paginate @volumes, :theme => 'bootstrap' %>
+<% end %>
