add model card/timeline/cardtype; do some model rspec

--- a/app/views/layouts/console.html.erb
+++ b/app/views/layouts/console.html.erb
@@ -62,6 +62,7 @@
     </footer>
 
     <%= javascript_include_tag "console", "data-turbolinks-track" => true %>
+    <%= yield :javascripts %>
   </div>
 </body>
 </html>
