--- a/app/views/console/volumes/_form.html.erb
+++ b/app/views/console/volumes/_form.html.erb
@@ -1,14 +1,42 @@
-<div class="form-group">
-  <%= f.label :title, "标题" %>
-  <%= f.text_field :title, class: "form-control" %>
-</div>
+<div class="row">
+  <div class="col-sm-5">
+    <div class="form-group">
+      <%= f.label :title, "标题 *" %>
+      <%= f.text_field :title, class: "form-control" %>
+    </div>
 
-<div class="form-group">
-  <%= f.label :show_id, "所属频道" %>
-  <%= f.select :show_id, options_from_collection_for_select(@shows, 'id', 'name', @from_show_id || f.object.show_id), { prompt: true }, class: "form-control" %>
-</div>
+    <div class="form-group">
+      <%= f.label :show_id, "所属频道" %>
+      <%= f.select :show_id, options_from_collection_for_select(@shows, 'id', 'name', @from_show_id || f.object.show_id), { prompt: true }, class: "form-control" %>
+    </div>
 
-<div class="form-group">
-  <%= f.label :desc, "描述" %>
-  <%= f.text_area :desc, class: "form-control", rows: 5 %>
-</div>
+    <div class="form-group">
+      <%= f.label :desc, "描述" %>
+      <%= f.text_area :desc, class: "form-control", rows: 5 %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :content, "内容" %>
+      <%= f.text_area :content, class: "form-control", rows: 12 %>
+    </div>
+  </div>
+
+  <div class="col-sm-7">
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <div class="form-inline">
+          <div class="form-group">
+            <%= f.label :resource, "资源地址", class: "sr-only" %>
+            <%= f.text_field :resource, class: "form-control", placeholder: "资源地址" %>
+          </div>
+          <button type="button" class="btn btn-default">确定</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div> 
+
+<%= content_for :javascripts do %>
+  
+<% end %>
+
