--- a/app/views/layouts/console.html.erb
+++ b/app/views/layouts/console.html.erb
@@ -62,6 +62,15 @@
     </footer>
 
     <%= javascript_include_tag "console", "data-turbolinks-track" => true %>
+    <script type="text/javascript" src="/sea-modules/seajs/seajs/2.1.1/sea.js" id="seajsnode"></script>
+    <script type="text/javascript">
+      seajs.config({
+        // base: 'http://example.com/path/to/base/',
+        alias: {
+          'jquery': 'jquery/1.10.1/jquery'
+        }
+      });
+    </script>
     <%= yield :javascripts %>
   </div>
 </body>
