--- a/app/views/console/shows/_form.html.erb
+++ b/app/views/console/shows/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="form-group">
-  <%= f.label :name, "频道名" %>
+  <%= f.label :name, "频道名*" %>
   <%= f.text_field :name, class: "form-control" %>
 </div>
 
