--- a/app/views/layouts/console.html.erb
+++ b/app/views/layouts/console.html.erb
@@ -72,7 +72,7 @@
     seajs.config({
       // base: 'http://example.com/path/to/base/',
       alias: {
-        'jquery': 'jquery/1.10.1/jquery'
+        'jquery': 'jquery/jquery/1.10.1/jquery'
       }
     });
   </script>
