--- a/app/views/console/volumes/_form.html.erb
+++ b/app/views/console/volumes/_form.html.erb
@@ -38,8 +38,8 @@
 
 <%= content_for :javascripts do %>
 <script type="text/javascript"> 
-  seajs.use("jquery", function($){
-    // console.log($);
+  seajs.use(["jquery", "backbone"], function($, Backbone){
+    console.log(Backbone);
   })
 </script>
 <% end %>
