--- a/app/views/console/timelines/index.html.erb
+++ b/app/views/console/timelines/index.html.erb
@@ -8,28 +8,30 @@
     <div id="j_resourceBox">
 
     </div>
-
     <hr>
-
     <div id="j_searchCard">
       <p>
         <input type="text" class="form-control" id="j_inputSearch" placeholder="查找资料卡" />
       </p>
-      <table class="table table-hover table-bordered">
-      </table>
+      <div class="pct_cardsList">
+        <table class="table table-hover table-bordered">
+        </table>
+      </div>
     </div>
   </div>
 
   <div class="col-sm-6">
-    <div class="table-responsive">
-      <table class="table table-hover">
-        <thead>
-          <th>时间</th>
-          <th>标题</th>
-          <th>操作</th>
-        </thead>
-        <tbody id="j_timelineList"></tbody>
-      </table>
+    <div class="pct_timelinesList">
+      <div class="table-responsive">
+        <table class="table table-hover">
+          <thead>
+            <th>时间</th>
+            <th>标题</th>
+            <th>操作</th>
+          </thead>
+          <tbody id="j_timelineList"></tbody>
+        </table>
+      </div>
     </div>
   </div>
 </div>
@@ -90,21 +92,42 @@
 <script type="text/template" id="j_cardTemplate">
   <td>[%= card_type_name %]</td>
   <td>[%= title %]</td>
-  <td> <button type="button" class="btn btn-xs btn-default j_addCard">添加</button> </td>
+  <td> <button type="button" class="btn btn-xs btn-info j_addCard">添加</button> </td>
 </script>
+
+<%= content_for :stylesheets do %>
+<style type="text/css">
+  .pct_cardsList, .pct_timelinesList {
+    overflow-y: auto;
+    height: 500px;
+  }
+  .pct_cardsList {
+    height: 318px;
+  }
+</style>
+<% end %>
 
 
 <%= content_for :javascripts do %>
 <script type="text/javascript"> 
-  seajs.use(["underscore", "backbone"], function(_, Backbone){
+  seajs.use(["$", "underscore", "backbone"], function($, _, Backbone){
+    // passing the token in Backbone AJAX calls
+    Backbone.sync = _.wrap(Backbone.sync, function(sync, method, model, options){
+      if(method == 'create' || method == 'update' || method == 'delete') {
+        options.headers = {
+          'X-CSRF-Token': '<%= form_authenticity_token %>'
+        };
+      }
+      sync(method, model, options);
+    });
+
     // Backbone initialize - Resource
     // ----------------------------------
     var Resource = Backbone.Model.extend({
       url: '<%= update_resource_console_volume_path(@volume) %>',
       defaults: {
         value: '<%= @volume.resource %>',
-        mode: 'show', // edit \ show
-        '<%= request_forgery_protection_token.to_s %>': '<%= form_authenticity_token %>'
+        mode: 'show' // edit \ show
       },
       initialize: function(){
       },
@@ -135,6 +158,7 @@
         resource.on('invalid', function(model, error){
           if(error.status === 0){
             that.showTip();
+            $('#j_btnConfirmResource').button('reset');
           }
         })
 
@@ -158,10 +182,10 @@
         'click button#j_btnCancelResource': 'showMode'
       },
       confirmEdit: function(){
-        var url = this.$el.find('input').val();
-        console.log(this.model.get('value'));
-        console.log(url);
-        if(this.model.get('value') === url){
+        var url = this.$el.find('input').val().trim();
+        if(url === ''){
+          this.model.trigger('invalid', this.model, this.model.validate({value:''}));
+        }else if(this.model.get('value') === url){
           this.showMode();
         }else {
           $('#j_btnConfirmResource').button('loading');
@@ -208,8 +232,7 @@
       defaults: {
         volume_id: '<%= @volume.id %>',
         card_id: 0,
-        at_time: 0,
-        '<%= request_forgery_protection_token.to_s %>': '<%= form_authenticity_token %>'
+        at_time: 0
       },
       initialize: function(){
       }
