--- a/app/views/layouts/console.html.erb
+++ b/app/views/layouts/console.html.erb
@@ -6,6 +6,7 @@
   <title>Rails1762</title>
   <%= stylesheet_link_tag "console", media: "all", "data-turbolinks-track" => true %>
   <%= render partial: "layouts/specific_css" %>
+  <%= yield :stylesheets %>
   <%= csrf_meta_tags %>
 </head>
 <body>
