--- a/app/views/console/volumes/_form.html.erb
+++ b/app/views/console/volumes/_form.html.erb
@@ -9,6 +9,11 @@
 </div>
 
 <div class="form-group">
+  <%= f.label :thumbnail, "配图" %>
+  <%= f.file_field :thumbnail, class: "form-control" %>
+</div>
+
+<div class="form-group">
   <%= f.label :desc, "描述" %>
   <%= f.text_area :desc, class: "form-control", rows: 5 %>
 </div>
