--- a/app/assets/stylesheets/console.css
+++ b/app/assets/stylesheets/console.css
@@ -18,3 +18,11 @@ textarea {
 .hr-s {
   margin: 10px 0 !important;
 }
+
+.gc_formImgPreview {
+  width: 150px;
+  height: 150px;
+  margin: 5px 0 10px;
+  padding: 10px;
+  border: 1px solid #ccc;
+}
