--- a/app/views/console/card_types/_form.html.erb
+++ b/app/views/console/card_types/_form.html.erb
@@ -1,9 +1,10 @@
-<div class="form-group">
-  <%= f.label :name, "名称*" %>
-  <%= f.text_field :name, class: "form-control" %>
-</div>
+<p class="lead"> <%= render_form_action(@card_type) %>资料卡分类 </p>
+<%= render partial: 'console/shared/errors', locals: { object: @card_type } %>
+<%= simple_form_for([:console, @card_type], html: { class: "form" }, defaults: { input_html: { class: 'form-control' } }) do |f| %>
+  <%= f.input :name, label: "名称" %>
+  <%= f.input :desc, label: "描述", as: :text, input_html: { rows: "10" } %>
 
-<div class="form-group">
-  <%= f.label :desc, "描述" %>
-  <%= f.text_area :desc, class: "form-control", rows: 5 %>
-</div>
+  <div class="form-group">
+    <button type="submit" class="btn btn-primary"><%= render_form_action(@card_type) %></button>
+  </div>
+<% end %>
