--- a/app/views/console/cards/_form.html.erb
+++ b/app/views/console/cards/_form.html.erb
@@ -1,19 +1,12 @@
-<div class="form-group">
-  <%= f.label :title, "标题*" %>
-  <%= f.text_field :title, class: "form-control" %>
-</div>
+<p class="lead"> <%= render_form_action(@card) %>资料卡 </p>
+<%= render partial: 'console/shared/errors', locals: { object: @card } %>
+<%= simple_form_for([:console, @card], html: { class: "form" }, defaults: { input_html: { class: 'form-control' } }) do |f| %>
+  <%= f.input :title, label: "标题" %>
+  <%= f.association :card_type, label: "所属类别", prompt: true %>
+  <%= f.input :desc, label: "描述", as: :text %>
+  <%= f.input :content, label: "内容", as: :text, input_html: { rows: "10" } %>
 
-<div class="form-group">
-  <%= f.label :card_type_id, "所属类别" %>
-  <%= f.select :card_type_id, options_from_collection_for_select(@card_types, 'id', 'name', f.object.card_type_id), { prompt: true }, class: "form-control" %>
-</div>
-
-<div class="form-group">
-  <%= f.label :desc, "描述" %>
-  <%= f.text_area :desc, class: "form-control", rows: 3 %>
-</div>
-
-<div class="form-group">
-  <%= f.label :content, "内容" %>
-  <%= f.text_area :content, class: "form-control", rows: 5 %>
-</div>
+  <div class="form-group">
+    <button type="submit" class="btn btn-primary"><%= render_form_action(@card) %></button>
+  </div>
+<% end %>
