--- a/app/views/console/cards/new.html.erb
+++ b/app/views/console/cards/new.html.erb
@@ -1,10 +1,1 @@
-<p class="lead">
-  新建资料卡
-</p>
-<%= render partial: 'console/shared/errors', locals: { object: @card } %>
-<%= form_for @card, url: console_cards_path do |f| %>
-  <%= render partial: 'form', locals: { f: f } %>
-  <div class="form-group">
-    <button type="submit" class="btn btn-primary">新建</button>
-  </div>
-<% end %>
+<%= render 'form' %>
