--- a/app/views/console/shows/_form.html.erb
+++ b/app/views/console/shows/_form.html.erb
@@ -1,9 +1,9 @@
-<div class="form-group">
-  <%= f.label :name, "频道名*" %>
-  <%= f.text_field :name, class: "form-control" %>
-</div>
-
-<div class="form-group">
-  <%= f.label :desc, "描述" %>
-  <%= f.text_area :desc, class: "form-control", rows: 5 %>
-</div>
+<p class="lead"> <%= render_form_action(@show) %>频道 </p>
+<%= render partial: 'console/shared/errors', locals: { object: @show } %>
+<%= simple_form_for([:console, @show], html: { class: "form" }, defaults: { input_html: { class: 'form-control' } }) do |f| %>
+  <%= f.input :name, label: "频道名" %>
+  <%= f.input :desc, label: "描述", as: :text, input_html: { rows: "10" } %>
+  <div class="form-group">
+    <button type="submit" class="btn btn-primary"><%= render_form_action(@show) %></button>
+  </div>
+<% end %>
