--- a/app/views/console/shows/edit.html.erb
+++ b/app/views/console/shows/edit.html.erb
@@ -1,10 +1,1 @@
-<p class="lead">
-  编辑频道 - <%= @show.name %>
-</p>
-<%= render partial: 'console/shared/errors', locals: { object: @show } %>
-<%= form_for @show, url: console_show_path(@show), method: :patch do |f| %>
-  <%= render partial: 'form', locals: { f: f } %>
-  <div class="form-group">
-    <button type="submit" class="btn btn-primary">编辑</button>
-  </div>
-<% end %>
+<%= render 'form' %>
