--- a/app/views/console/shows/new.html.erb
+++ b/app/views/console/shows/new.html.erb
@@ -1,10 +1,1 @@
-<p class="lead">
-  新建频道
-</p>
-<%= render partial: 'console/shared/errors', locals: { object: @show } %>
-<%= form_for @show, url: console_shows_path do |f| %>
-  <%= render partial: 'form', locals: { f: f } %>
-  <div class="form-group">
-    <button type="submit" class="btn btn-primary">新建</button>
-  </div>
-<% end %>
+<%= render 'form' %>
