--- a/app/views/console/volumes/_form.html.erb
+++ b/app/views/console/volumes/_form.html.erb
@@ -1,6 +1,4 @@
-<p class="lead">
-  <%= render_form_action(@volume) %>节目
-</p>
+<p class="lead"> <%= render_form_action(@volume) %>节目 </p>
 
 <%= render partial: 'console/shared/errors', locals: { object: @volume } %>
 
@@ -8,16 +6,7 @@
   <%= f.input :title, label: "标题" %>
   <%= f.association :show, prompt: true, label: "所属频道" %>
 
-  <div class="form-group">
-    <%= f.label :thumbnail, "配图" %>
-    <% if f.object.thumbnail? %>
-      <div class="gc_formImgPreview">
-        <%= image_tag(f.object.thumbnail_url, class: "image-responsive") %>
-      </div>
-    <% end %>
-    <%= f.hidden_field :thumbnail_cache %>
-    <%= f.file_field :thumbnail, class: "form-control" %>
-  </div>
+  <%= render :partial => "console/shared/upload_thumb_image_fields", locals: { f: f } %>
 
   <%= f.input :desc, label: "描述", as: :text, input_html: { rows: "10" } %>
   <%= f.input :content, label: "内容", input_html: { rows: 12 } %>
