--- a/app/views/layouts/console.html.erb
+++ b/app/views/layouts/console.html.erb
@@ -74,8 +74,12 @@
   </div>
   
   <!-- Javascripts -->
+  <script type="text/javascript">
+    _TOKEN_ = "<%= form_authenticity_token %>";
+  </script>
   <%= javascript_include_tag "console", "data-turbolinks-track" => true %>
-  <%= yield :javascripts %>
+  <%= yield :prepare_javascripts %>
   <%= render partial: "layouts/specific_js" %>
+  <%= yield :javascripts %>
 </body>
 </html>
